# Quantdesk

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/public/data/: backtest_summary.json  benchmarks.json  session_demo.json
dashboard/src/: App.jsx  styles.css
engine/: CMakeLists.txt
engine/benchmarks/: matching_engine_benchmark.cpp
engine/include/quantdesk/: backtester.hpp  event_bus.hpp  exchange_gateway.hpp  matching_engine.hpp  order_book.hpp  risk_engine.hpp  types.hpp
engine/src/: backtester.cpp  bindings.cpp  event_bus.cpp  exchange_gateway.cpp  matching_engine.cpp  order_book.cpp  risk_engine.cpp
engine/tests/: order_book_tests.cpp  risk_engine_tests.cpp
orchestrator/: app.js  package-lock.json  package.json  server.js
orchestrator/Routers/: riskRouter.js  strategyRouter.js
research/: convert_binance_trades.py  export_dashboard_data.py  requirements.txt
research/quantdesk_py/: __init__.py  backtest_runner.py  data_loader.py  live_runner.py
research/quantdesk_py/strategies/: market_maker.py  ml_signal.py  stat_arb.py
